[gd_scene load_steps=11 format=3 uid="uid://cd2hiax67rgqi"]

[ext_resource type="Script" path="res://Scripts/BaseUIComponents/ComboBox.gd" id="1_5ix2a"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="2_51b4e"]
[ext_resource type="StyleBox" uid="uid://ck8x0ojn261w3" path="res://Resources/Themes/PanelContainer-Light.tres" id="2_bupg5"]
[ext_resource type="Texture2D" uid="uid://3vdlgvk3ptm" path="res://Resources/Textures/DownArrow.svg" id="3_hvhpv"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="3_trcd2"]
[ext_resource type="PackedScene" uid="uid://c37vy0oob4v5k" path="res://Scenes/BaseUIComponents/PopupMenu.tscn" id="5_apcoh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llesv"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_bottom = 1
border_color = Color(0.548963, 0.548963, 0.548962, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_1cq44"]
resource_name = "Animation"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.2, 1, 1),
"update": 0,
"values": [0, 8, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [4, 0]
}

[sub_resource type="Animation" id="Animation_ijbwx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x2eb0"]
_data = {
"Animation": SubResource("Animation_1cq44"),
"RESET": SubResource("Animation_ijbwx")
}

[node name="ComboBox" type="PanelContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -20.0
offset_right = 213.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_bupg5")
script = ExtResource("1_5ix2a")

[node name="ThemePainter" parent="." instance=ExtResource("3_trcd2")]

[node name="BottomLine" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_llesv")

[node name="LabelMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Label" type="Label" parent="LabelMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_fonts/font = ExtResource("2_51b4e")
text = "Text"
text_overrun_behavior = 3

[node name="ThemePainter" parent="LabelMarginContainer/Label" instance=ExtResource("3_trcd2")]

[node name="DownArrowMarginContainer" type="MarginContainer" parent="LabelMarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="DownArrowIcon" type="TextureRect" parent="LabelMarginContainer/DownArrowMarginContainer"]
self_modulate = Color(0.11, 0.11, 0.11, 0.490196)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("3_hvhpv")
expand_mode = 1

[node name="ThemePainter" parent="LabelMarginContainer/DownArrowMarginContainer/DownArrowIcon" instance=ExtResource("3_trcd2")]
translucent = true

[node name="DownArrowAnimationPlayer" type="AnimationPlayer" parent="LabelMarginContainer/DownArrowMarginContainer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_x2eb0")
}

[node name="PopupMenu" parent="." instance=ExtResource("5_apcoh")]
unique_name_in_owner = true
width = -1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
